--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
         <div class="col-md-4">
             <div class="row">
-                <h3>Chiffres clés | date du 9/12/2017</h3>
+                <h3>Chiffres clés - date du 9/12/2017</h3>
                 <h4>Total Personnes déplacées</h4>
                 <p id="statTotIndividus"></p>
                 <h4>Total Ménages</h4>
