--- a/index.html
+++ b/index.html
@@ -17,6 +17,19 @@
     <script src="js/dc.leaflet.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/topojson.v1.min.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111032017-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-111032017-1');
+
+    </script>
 </head>
 
 <body>
