--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
         gtag('js', new Date());
 
         gtag('config', 'UA-111032017-1');
-
     </script>
 </head>
 
@@ -126,7 +125,7 @@
             <div class="col-sm-12 map-container">
                 <div class="regionLabel">
                     <div>Filtre actif: <strong>Tous les départements</strong></div>
-                    <a href="#" class="reset-btn small">reset</a>
+                    <a href="#" class="reset-btn">reset</a>
                 </div>
                 <div id="map"></div>
                 <p class="small"><em>The boundaries and names shown and the designations used on this map do not imply official endorsement or acceptance by the United Nations.</em>
