--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 <body>
     <div class="container">
         <h3>Visualisation de la situation des personnes déplacées internes | République du Congo</h3>
-        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus eu, pretium quis, sem.
-        <div class="row">
-            <div id="header"></div>
-        </div>
+        <p class="small">Le Ministère des Affaires Sociales et de l’Action Humanitaire (MASAH), en collaboration avec ses partenaires PAM Congo et Caritas Congo mènent des opérations d’enregistrement et de recensement des personnes déplacées dans le cadre de la crise du Pool. Cette visualisation dynamique développée par l’équipe de Humanitarian Data Exchange offre un aperçu de la situation basée sur les données numérisées du moment (des opérations de numérisation sont en cours) et sera mise à jour au fur et à mesure. </p>
+
+        <div id="header"></div>
+
         <div class="col-md-4">
             <div class="row">
                 <h3>Chiffres clés - date du 9/12/2017</h3>
