--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body>
     <div class="container">
         <h3>Visualisation de la situation des personnes déplacées internes | République du Congo</h3>
-        <p class="small">Le Ministère des Affaires Sociales et de l’Action Humanitaire (MASAH), en collaboration avec ses partenaires PAM Congo et Caritas Congo mènent des opérations d’enregistrement et de recensement des personnes déplacées dans le cadre de la crise du Pool. Cette visualisation dynamique développée par l’équipe de Humanitarian Data Exchange offre un aperçu de la situation basée sur les données numérisées du moment (des opérations de numérisation sont en cours) et sera mise à jour au fur et à mesure. </p>
+        <p class="smaller">Le Ministère des Affaires Sociales et de l’Action Humanitaire (MASAH), en collaboration avec ses partenaires PAM Congo et Caritas Congo mènent des opérations d’enregistrement et de recensement des personnes déplacées dans le cadre de la crise du Pool. Cette visualisation dynamique développée par l’équipe de Humanitarian Data Exchange offre un aperçu de la situation basée sur les données numérisées du moment (des opérations de numérisation sont en cours) et sera mise à jour au fur et à mesure. </p>
 
         <div id="header"></div>
 
@@ -128,7 +128,7 @@
                     <a href="#" class="reset-btn">reset</a>
                 </div>
                 <div id="map"></div>
-                <p class="small"><em>The boundaries and names shown and the designations used on this map do not imply official endorsement or acceptance by the United Nations.</em>
+                <p class="small"><em>Les frontières indiquées et les désignations utilisées sur cette carte n'impliquent pas l'approbation des Nations Unies.</em>
                 </p>
             </div>
             <div class="col-md-12 rowcharts">
