--- a/index.html
+++ b/index.html
@@ -43,9 +43,6 @@
                 <h3>Chiffres clés - date du 9/12/2017</h3>
                 <h4>Total Personnes déplacées</h4>
                 <p id="statTotIndividus"></p>
-                <h4>Total Ménages</h4>
-                <p id="statTotMenages"></p>
-
                 <div class="col-xs-6">
                     <h4>Hommes</h4>
                     <p id="statTotHommes"></p>
@@ -54,6 +51,9 @@
                     <h4>Femmes</h4>
                     <p id="statTotFemmes"></p>
                 </div>
+                <h4>Total Ménages</h4>
+                <p id="statTotMenages"></p>
+
                 <h4>Personnes agées (plus de 59 ans)</h4>
                 <p id="statTotVieux"></p>
                 <div class="col-xs-6">
@@ -64,6 +64,7 @@
                     <h4>Femmes</h4>
                     <p id="statTotVieuxF"></p>
                 </div>
+                <div class="row" id="separateur"></div>
 
                 <h3>Education</h3>
 
@@ -99,6 +100,8 @@
                     <h4>Filles</h4>
                     <p id="statTotLyceeF"></p>
                 </div>
+                <div class="row" id="separateur"></div>
+
                 <div id="vulnerabilite">
                     <h3>Vulnérabilité</h3>
                     <h4>Personnes vivant avec un handicap</h4>
